generated-tests/tests/snapshots/rust/rust__test_generated_declaration_statement.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let var = source;

AST:
(source_file
  (let_declaration
    (identifier var)
    (identifier source)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "var",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
