generated-tests/tests/snapshots/rust/rust__test_generated_enum_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
enum TestEnum { Variant(i32) }

AST:
(source_file
  (enum_item
    (type_identifier)
    (enum_variant_list
      (enum_variant
        (identifier Variant)
        (ordered_field_declaration_list
          (primitive_type)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestEnum",
            line_number: 1,
            definition_type: EnumDefinition,
            scope: Some(
                "TestEnum",
            ),
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
