generated-tests/tests/snapshots/rust/rust__test_generated_expression_statement.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
a2 + b2;

AST:
(source_file
  (expression_statement
    (binary_expression
      (identifier a2)
      (identifier b2)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
