generated-tests/tests/snapshots/rust/rust__test_generated_field_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
obj.field

AST:
(source_file
  (ERROR
    (field_expression
      (identifier obj)
      (field_identifier)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
