generated-tests/tests/snapshots/rust/rust__test_generated_field_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
if let Type { field1: x4 } = value { }

AST:
(source_file
  (expression_statement
    (if_expression
      (let_condition
        (struct_pattern
          (type_identifier)
          (field_pattern
            (field_identifier)
            (identifier x4)
          )
        )
        (identifier value)
      )
      (block)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
