generated-tests/tests/snapshots/rust/rust__test_generated_float_literal.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let pi = 3.14;

AST:
(source_file
  (let_declaration
    (identifier pi)
    (float_literal)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "pi",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "pi",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 5,
            end_line: 1,
            end_column: 7,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
