generated-tests/tests/snapshots/rust/rust__test_generated_for_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
for item in vec { println!("{}", item); }

AST:
(source_file
  (expression_statement
    (for_expression
      (identifier item)
      (identifier vec)
      (block
        (expression_statement
          (macro_invocation
            (identifier println)
            (token_tree
              (string_literal
                (string_content)
              )
              (identifier item)
            )
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "item",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
