generated-tests/tests/snapshots/rust/rust__test_generated_generic_pattern.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
match x { Vec::<T>::new() => x6, _ => x6 }

AST:
(source_file
  (expression_statement
    (match_expression
      (identifier x)
      (match_block
        (match_arm
          (match_pattern
            (tuple_struct_pattern
              (scoped_identifier
                (generic_type
                  (type_identifier)
                  (type_arguments
                    (type_identifier)
                  )
                )
                (identifier new)
              )
            )
          )
          (identifier x6)
        )
        (match_arm
          (match_pattern)
          (identifier x6)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
