generated-tests/tests/snapshots/rust/rust__test_generated_generic_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let var4: Vec<i32> = vec![1, 2, 3];

AST:
(source_file
  (let_declaration
    (identifier var4)
    (generic_type
      (type_identifier)
      (type_arguments
        (primitive_type)
      )
    )
    (macro_invocation
      (identifier vec)
      (token_tree
        (integer_literal)
        (integer_literal)
        (integer_literal)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "var4",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
